# jac313

./: .gitignore  PROCESS.md  README.md
v001/Qlite/: CMakeLists.txt  README.md
v001/Qlite/examples/: CMakeLists.txt  v001_example.cpp
v001/Qlite/modules/: jac313.qlite.v001.cppm
v001/Qlite/tests/: CMakeLists.txt  v001_test.cpp
v001/Setup/: CMakeLists.txt  README.md  build_setup_exe.sh  compilers.pin  jac313_setup  recipes.conf  setup_main.cpp
v001/Setup/modules/: jac313.setup.v001.cppm
v001/Setup/src/: v001.cpp
v001/Store/: CMakeLists.txt  README.md
v001/Store/examples/: CMakeLists.txt  binary_persist_smoke.cpp  binary_to_jtext_smoke.cpp  flag_routing_smoke.cpp  html_persist_smoke.cpp  json_persist_smoke.cpp  jtext_persist_smoke.cpp  sql_persist_smoke.cpp  v001_example.cpp
v001/Store/modules/: jac313.store.v001.cppm  jac313.store.v001.importstd.cppm
v001/Store/tests/: CMakeLists.txt  binary_reader_test.cpp  json_reader_test.cpp  metric_view_test.cpp  v001_test.cpp
v001/tools/: CMakeLists.txt  jac313_wipe_all.cpp  jac313_wipe_new.cpp  jac313_wipe_one.cpp
v001/tools/hooks/: pre-push
v001/tools/jac313_test_cli/: build_benchmark.hpp  build_pipeline.cpp  build_pipeline.hpp  compiler.hpp  host_hardware.cpp  host_hardware.hpp  host_pin.cpp  host_pin.hpp  kept_logs.cpp  kept_logs.hpp  main.cpp  manifest.cpp  manifest.hpp  matrix.cpp  matrix.hpp  matrix_log_metrics.hpp  matrix_manifest.hpp  options.hpp  params.hpp  platform.cpp  process.cpp  process.hpp  report.cpp  report.hpp  results_db.cpp  results_db.hpp  run_identity.cpp  run_identity.hpp  runner.cpp  runner.hpp  test_logs.cpp  test_logs.hpp  test_summary_render.cpp  test_summary_render.hpp  time_util.hpp
v002/: .gitignore  CMakeLists.txt  Dev Notification.md  README.md  bootstrap.sh
v002/Qlite/: CMakeLists.txt  README.md
v002/Qlite/examples/: CMakeLists.txt  v002_example.cpp
v002/Qlite/modules/: jac313.qlite.v002.cppm
v002/Qlite/tests/: CMakeLists.txt  v002_test.cpp
v002/Setup/: CMakeLists.txt  README.md  build_setup_exe.sh  compilers.conf  compilers.pin  jac313_setup  recipes.conf  setup_main.cpp
v002/Setup/modules/: jac313.setup.v002.cppm
v002/Setup/src/: v002.cpp
v002/Store/: CMakeLists.txt  README.md
v002/Store/examples/: CMakeLists.txt  binary_persist_smoke.cpp  binary_to_jtext_smoke.cpp  flag_routing_smoke.cpp  html_persist_smoke.cpp  json_persist_smoke.cpp  jtext_persist_smoke.cpp  sql_persist_smoke.cpp  v002_example.cpp
v002/Store/modules/: jac313.store.v002.cppm  jac313.store.v002.importstd.cppm
v002/Store/tests/: CMakeLists.txt  binary_reader_test.cpp  json_reader_test.cpp  metric_view_test.cpp  saturating_capacity_test.cpp  v002_test.cpp
v002/docs/: Architecture.md  Benchmarks.md  Bloopers.md  Cpp26_Adoption.md  ForUsers.md  Forward.md  FutureTestAxes.md  HowToReadResults.md  Maturity.md  Memory-And-Concurrency.md  Modules.md  QuickStart.md  Results.md  RunAllTests.md  Setup.md  TODO.md  UserEnhancements.md  Verify.md
v002/docs/findings/: clang_cpp26_dynamic_format.cpp  gcc16_libstdcxx_regressions.md
v002/docs/samples/: persist_database.db  persist_keeper.html  persist_keeper.jtext  persist_keeper.sql  persist_keeper_Floats.json  persist_keeper_Floats.jtext  persist_keeper_Ints.html  persist_keeper_Ints.jtext  persist_keeper_Ints.sql
v002/docs/store/: bitmaps.md  categories.md  flags.md  log-viewer-plan.md  logging.md  persistence.md  reporting.md  use-cases.md
v002/jText/: CMakeLists.txt  README.md  jText.api.inc  jText.cpp  jText.h  jText.impl.inc
v002/jText/examples/: CMakeLists.txt  v002_example.cpp
v002/jText/modules/: jac313.jtext.v002.core.cppm  jac313.jtext.v002.cppm  jac313.jtext.v002.importstd.cppm  jac313.jtext.v002.importstd.impl.cpp  jac313.jtext.v002.reader.cppm  jac313.jtext.v002.writer.cppm
v002/jText/tests/: CMakeLists.txt  v002_test.cpp
v002/jText/tools/: CMakeLists.txt  jtext_xtox_sql.cpp
v002/shared/: jac313_results_db.hpp
v002/suppressions/: jac313.supp
v002/test-results/: README.md
v002/test-summary/: README.md  Run_001.md  Run_002.md  Run_003.md  bench_results.db  jac313_results.db  results.db
v002/test-summary/bench/: README.md  Run_001.md  Run_002.md  Run_003.md  Run_004.md  Run_005.md  Run_006.md  Run_007.md  Run_008.md  Run_020.md  Run_021.md  Run_022.md  Run_025.md  Run_032.md  Run_033.md  Run_043.md  Run_044.md  Run_045.md  Run_078.md  Run_079.md  Run_102.md  Run_103.md  Run_139.md  Run_140.md  Run_162.md  Run_163.md  Run_183.md  Run_184.md  Run_206.md  Run_207.md  Run_250.md  Run_251.md  Run_276.md  Run_277.md
v002/test-summary/compiler/: README.md
v002/test-summary/compiler-build-times/: README.md
v002/test-summary/ctest/: README.md  Run_001.md  Run_002.md  Run_003.md  Run_005.md  Run_008.md  Run_015.md  Run_016.md  Run_018.md  Run_019.md  Run_021.md  Run_028.md  Run_031.md  Run_038.md  Run_039.md  Run_041.md  Run_042.md  Run_073.md  Run_076.md  Run_097.md  Run_100.md  Run_134.md  Run_137.md  Run_157.md  Run_160.md  Run_178.md  Run_181.md  Run_201.md  Run_204.md  Run_245.md  Run_248.md  Run_271.md  Run_274.md
v002/test-summary/smoke/: README.md  Run_001.md  Run_002.md  Run_003.md  Run_004.md  Run_006.md  Run_016.md  Run_017.md  Run_019.md  Run_020.md  Run_022.md  Run_029.md  Run_030.md  Run_039.md  Run_040.md  Run_042.md  Run_043.md  Run_074.md  Run_077.md  Run_098.md  Run_101.md  Run_135.md  Run_138.md  Run_158.md  Run_161.md  Run_179.md  Run_182.md  Run_202.md  Run_205.md  Run_246.md  Run_249.md  Run_272.md  Run_275.md
v002/test-summary/verify/: README.md  Run_004.md  Run_007.md  Run_008.md  Run_009.md  Run_010.md  Run_011.md  Run_022.md  Run_023.md  Run_024.md  Run_034.md  Run_045.md  Run_046.md  Run_047.md  Run_080.md  Run_081.md  Run_104.md  Run_105.md  Run_141.md  (+11 more)
v002/test-summary/verify-lite/: README.md  Run_003.md  Run_015.md  Run_023.md  Run_026.md  Run_029.md
v002/tests/: test_limits.txt  test_params_bench.txt  test_params_full.txt
v002/tools/: CMakeLists.txt  build_matrix.sh  jac313_clean_slate.cpp  jac313_wipe_all.cpp  jac313_wipe_jac.cpp  jac313_wipe_new.cpp  jac313_wipe_one.cpp  run_all.sh
(+501 files in other folders)
